# StateSpectre

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  MANIFEST.txt  README.md  run_tests.sh
abi/: offload_abi.h  offload_canonical_abi.hpp
config/: config.example.yaml  config.production.yaml  offload_manager_v2.yaml
diagrams/: architecture.mmd  state_machine.mmd  state_machine_v2.mmd
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  PERFORMANCE.md  README.md  UPDATE_V2.md  USAGE.md
docs/design/: abi-notes.md  deduplication.md  design-spec.md  rollout-pull-and-export.md  rpc-semantics.md
docs/update_v2/: 00_UPDATE_OVERVIEW.md  01_CANONICAL_MODEL_STATE_STORE.md  04_MULTI_JOB_NAMESPACE_AND_QUOTAS.md  IMPLEMENTATION_MILESTONES_V2.md  LIBFABRIC_EXPORT_BACKEND.md  MIGRATION_FROM_V1.md
impl/: DAEMON_SKETCH.cpp  IMPLEMENTATION_PLAN.md  RANK_AGENT_SKETCH.cpp
python_api/: PYTHON_API.md  canonical_python_api.md  setup.py
python_api/fastoffload/: __init__.py  _rollout.py  _wire.py
python_api/state_spectre/: __init__.py
rpc/: offload_canonical.proto  offload_daemon.proto
spec/: MEMORY_TIERING.md  RACE_CONDITIONS.md  config.example.yaml  config.production.yaml
src/agent/: agent.cpp  agent.h  rpc_client.cpp  rpc_client.h
src/common/: completion_ring.h  control_layout.h  metrics.cpp  metrics.h  numa_util.cpp  numa_util.h  protocol.h  protocol_v2.h  uds.cpp  uds.h  util.h  wire.cpp  wire.h  wire_v2.cpp  wire_v2.h
src/daemon/: canonical.cpp  canonical.h  canonical_rollout.cpp  config.cpp  config.h  daemon.cpp  daemon.h  export_backend.cpp  export_backend.h  export_libfabric.cpp  main.cpp
src/python/: bindings.cpp
src/tools/: offload_stat.cpp
tests/: BENCHMARKS.md  METRICS.md  TEST_PLAN.md  TEST_PLAN_V2.md
tests/cpp/: bench.cpp  test_canonical.cpp  test_config.cpp  test_daemon_rpc.cpp  test_evict_restore.cpp  test_fault_injection.cpp  test_harness.h  test_layout.cpp  test_wire.cpp  test_wire_v2.cpp
tests/python/: rollout_libfabric_recv.py  run_rollout_node.sh  run_trainer_node.sh  test_aliased_restore_into.py  test_canonical_e2e.py  test_canonical_restore.py  test_llm_workload.py  test_multiproc.py  test_python_e2e.py  trainer_seal.py
